# human_vision-human_vision_exchange

./: CMakeLists.txt  package.xml
include/: BodyPartEnum.hpp
msg/: FaceDescription.msg  FaceDescriptionFacenet.msg  FaceDescriptionVector.msg  FaceDescriptionVectorFacenet.msg  Keypoints2d.msg  ObjectStamped.msg  Objects.msg
srv/: CutFaces.srv  DoPhotoReceiver.srv  FaceVectorReceiver.srv  FaceVectorReceiverFacenet.srv  FindFaceVectors.srv  FindFaceVectorsFacenet.srv
